--- a/index.html
+++ b/index.html
@@ -71,11 +71,22 @@ body {
     transition: background 8s ease-in-out;
 }
 
+canvas {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+}
+
+
 
 
     </style>
 </head>
 <body>
+    <canvas id="particleCanvas"></canvas>
     <div class="container">
         <a href="https://freeimage.host/i/398O3B9"><img src="https://iili.io/398O3B9.md.jpg" alt="398O3B9.md.jpg" border="0"></a>
         <h1>Panji Eky Bima</h1>
@@ -116,11 +127,63 @@ body {
 
             index = (index + 1) % colors.length;
         }
-
-// Ubah warna setiap 5 detik sambil tetap menjalankan animasi CSS
 setInterval(changeBackground, 5000);
 
+/* ---- Efek Partikel dengan Canvas ---- */
+const canvas = document.getElementById("particleCanvas");
+        const ctx = canvas.getContext("2d");
 
+        canvas.width = window.innerWidth;
+        canvas.height = window.innerHeight;
+
+        let particles = [];
+
+        class Particle {
+            constructor() {
+                this.x = Math.random() * canvas.width;
+                this.y = Math.random() * canvas.height;
+                this.size = Math.random() * 3 + 1;
+                this.speedX = Math.random() * 2 - 1;
+                this.speedY = Math.random() * 2 - 1;
+            }
+
+            update() {
+                this.x += this.speedX;
+                this.y += this.speedY;
+
+                if (this.x < 0 || this.x > canvas.width) this.speedX *= -1;
+                if (this.y < 0 || this.y > canvas.height) this.speedY *= -1;
+            }
+
+            draw() {
+                ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
+                ctx.beginPath();
+                ctx.arc(this.x, this.y, this.size, 0, Math.PI * 2);
+                ctx.closePath();
+                ctx.fill();
+            }
+        }
+
+        function initParticles() {
+            particles = [];
+            for (let i = 0; i < 100; i++) {
+                particles.push(new Particle());
+            }
+        }
+
+        function animateParticles() {
+            ctx.clearRect(0, 0, canvas.width, canvas.height);
+
+            particles.forEach(particle => {
+                particle.update();
+                particle.draw();
+            });
+
+            requestAnimationFrame(animateParticles);
+        }
+
+        initParticles();
+        animateParticles();
     </script>
 </body>
 </html>
