--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ canvas {
             <p><strong>Email:</strong> bimabsaku@gmail.com</p>
             <p><strong>Bio:</strong> Hello My Name Panji Eky Bima, I live in Cilegon,Banten. My hobby is learn something new and make me feel interest. I am a gradute on SMKN 1 Cilegon at a electrical department, and now i'm working on PT. Inti Everspring Indonesia as a Operator Plant Technical. My hobby is playing game or maybe did sport like gym, swimming or anything else. but now my hobby is find something intereset that can make money</p>
             <p><strong>Social Media:</strong> <a href="https://instagram.com/panjiekybima" target="_blank">Instagram</a></p>
-            <button class="close-btn" onclick="toggleProfile()">Tutup Profil</button>
+            <button class="close-btn" onclick="toggleProfile()">Close Profile</button>
         </div>
     </div>
 
